# UNSW-MRes

./: .gitignore  README.md
MRes/AMOS/: tilt_case_study.ipynb
MRes/Bill/: =2.0.1  cot_ag_futures_2025-12-30.json  cot_ag_futures_2025-12-30_dataset.csv  data_analysis.ipynb  dataset_creator.ipynb
MRes/Chapter1/: .gitignore  CE_Obs_Analysis.ipynb  CE_Observation.ipynb  COW.ipynb  Drifters.ipynb  Error_Plots.ipynb  IN2023_paper_plots.ipynb  Idealised_ESM_Analysis.ipynb  LNAM.ipynb  MOCA.ipynb  MOCA1.ipynb  MOCA12.ipynb  MOCA1_OLD.ipynb  MOCA2.ipynb  MOCA2_OLD.ipynb  MOCAspace.ipynb  Modelled_Eddies_Fields.ipynb  ROMS_Breakdown.ipynb  ROMS_paper_plots.ipynb  ROMS_tests.ipynb  SADCP_ESPRA.ipynb  Table.ipynb  VG.ipynb  VG_Test.ipynb  VG_old.ipynb
MRes/Chapter2/: Analysis.ipynb  ESM_breakdown.ipynb  (+17 more)
MRes/seacofs_eddy_dataset_modular/: NOTES.md  README.md  pyproject.toml
MRes/seacofs_eddy_dataset_modular/config/: example.yaml  local.yaml
MRes/seacofs_eddy_dataset_modular/notebooks/: Untitled.ipynb  run_pipeline.ipynb
MRes/seacofs_eddy_dataset_modular/src/seacofs_eddy_dataset/: __init__.py  io.py  pipeline.py
MRes/seacofs_eddy_dataset_modular/src/seacofs_eddy_dataset.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
MRes/seacofs_eddy_dataset_modular/src/seacofs_eddy_dataset/core/: __init__.py  doppio.py  esp.py  grid.py  nencioli.py  tilt.py  tracking.py  velocity.py  vertical.py
MRes/seacofs_eddy_dataset_modular/src/seacofs_eddy_dataset/stages/: detection.py  processing.py  surface_fit.py  tilt.py  tracking.py  vertical_profiles.py
(+440 files in other folders)
